bug 359148 : when saving a file, "unicode" characters in filename are lost (turned into '_') : r=biesi, sr=darin